[project]
name = "agent-demo"
version = "0.1.0"
description = "this is an agent demo"
requires-python = ">=3.10"
dependencies = [
    "ddgs>=9.14.2",
    "duckduckgo-search>=8.1.1",
    "gradio>=5.14.0,<6.0.0",
    "huggingface-hub>=1.14.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "mcp[cli]>=1.27.1",
    "mem0ai>=2.0.2",
    "openai>=2.36.0",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
    "smolagents[gradio,mcp]>=1.22.0",
]
